--- a/_config.yml
+++ b/_config.yml
@@ -86,3 +86,11 @@ search:
     format: html
     limit: 10000
 
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
