--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.1",
     "hexo": "^3.7.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
