--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.2.11",
     "hexo-renderer-stylus": "^0.2.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "hexo-wordcount": "^6.0.1"
   }
 }
